testing feedback loop in toxicity

--- a/jupyter/_firstProject/SM_20200307.ipynb
+++ b/jupyter/_firstProject/SM_20200307.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,11 +63,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function that takes raw data and completes all preprocessing required before model fits\n",
     "def process_raw_data(fn, my_random_seed, test=False):\n",
     "    # read and summarize data\n",
     "    toxic_data = pd.read_csv(fn)\n",
@@ -98,7 +97,6 @@
     "    # features from Amazon.csv to add to feature set\n",
     "    toxic_data['word_count'] = toxic_data['comment_text'].str.split(' ').str.len()\n",
     "    toxic_data['punc_count'] = toxic_data['comment_text'].str.count(\"\\.\")\n",
-    "    w\n",
     "\n",
     "    X_quant_features = toxic_data[[\"word_count\", \"punc_count\"]]\n",
     "    print(\"Look at a few rows of the new quantitative features: \")\n",
@@ -140,6 +138,81 @@
     "        print(X_raw_test.shape)\n",
     "        print('SUCCESS!')\n",
     "        return(X_train, X_test, y_train, y_test, X_raw_train, X_raw_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toxic_data is: <class 'pandas.core.frame.DataFrame'>\n",
+      "toxic_data has 159571 rows and 9 columns \n",
+      "\n",
+      "the data types for each of the columns in toxic_data:\n",
+      "id               object\n",
+      "comment_text     object\n",
+      "toxic             int64\n",
+      "severe_toxic      int64\n",
+      "obscene           int64\n",
+      "threat            int64\n",
+      "insult            int64\n",
+      "identity_hate     int64\n",
+      "any_toxic          bool\n",
+      "dtype: object \n",
+      "\n",
+      "the first 10 rows in toxic_data:\n",
+      "                 id                                       comment_text  toxic  \\\n",
+      "0  0000997932d777bf  Explanation\\nWhy the edits made under my usern...      0   \n",
+      "1  000103f0d9cfb60f  D'aww! He matches this background colour I'm s...      0   \n",
+      "2  000113f07ec002fd  Hey man, I'm really not trying to edit war. It...      0   \n",
+      "3  0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...      0   \n",
+      "4  0001d958c54c6e35  You, sir, are my hero. Any chance you remember...      0   \n",
+      "\n",
+      "   severe_toxic  obscene  threat  insult  identity_hate  any_toxic  \n",
+      "0             0        0       0       0              0      False  \n",
+      "1             0        0       0       0              0      False  \n",
+      "2             0        0       0       0              0      False  \n",
+      "3             0        0       0       0              0      False  \n",
+      "4             0        0       0       0              0      False  \n",
+      "The rate of 'toxic' Wikipedia comments in the dataset: \n",
+      "0.10167887648758234\n",
+      "Shape of HashingVectorizer X:\n",
+      "(159571, 131072)\n",
+      "Look at a few rows of the new quantitative features: \n",
+      "   word_count  punc_count\n",
+      "0          42           5\n",
+      "1          18           2\n",
+      "2          42           3\n",
+      "3         112           3\n",
+      "4          13           1\n",
+      "5          12           1\n",
+      "6           8           0\n",
+      "7          21           2\n",
+      "8          83           7\n",
+      "9          12           0\n",
+      "Size of combined bag of words and new quantitative variables matrix:\n",
+      "(159571, 131074)\n",
+      "(159571, 131074)\n",
+      "Shape of X_train and X_test:\n",
+      "(127656, 131074)\n",
+      "(31915, 131074)\n",
+      "Shape of y_train and y_test:\n",
+      "(127656,)\n",
+      "(31915,)\n",
+      "Shape of X_raw_train and X_raw_test:\n",
+      "(127656, 11)\n",
+      "(31915, 11)\n",
+      "SUCCESS!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CHANGE FILE PATH and my_random_seed number: \n",
+    "X_train, X_test, y_train, y_test, X_raw_train, X_raw_test = process_raw_data(fn='/Users/smolloy/Dev/parsons/ml-2020_data/toxiccomments_train.csv', my_random_seed=666)"
    ]
   },
   {
@@ -226,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Pos': 12919, 'Neg': 114737, 'TP': 12871, 'TN': 114696, 'FP': 41, 'FN': 48, 'Accuracy': 0.99930281381212, 'Precision': 0.9968246592317225, 'Recall': 0.9962845421472251, 'desc': 'lgs_train'}\n"
+      "{'Pos': 12919, 'Neg': 114737, 'TP': 12873, 'TN': 114700, 'FP': 37, 'FN': 46, 'Accuracy': 0.9993498151281569, 'Precision': 0.9971340046475601, 'Recall': 0.9964393528910906, 'desc': 'lgs_train'}\n"
      ]
     }
    ],
