adding training and testing data results

--- a/jupyter/_firstProject/TC/SM_20200308.ipynb
+++ b/jupyter/_firstProject/TC/SM_20200308.ipynb
@@ -19555,9 +19555,9 @@
     "lgs = linear_model.SGDClassifier(loss='log')\n",
     "lgs.fit(X_train, y_train)\n",
     "\n",
-    "lgs_performance_train = BinaryClassificationPerformance(lgs.predict(X_train), y_train, 'lgs_test')\n",
-    "lgs_performance_train.compute_measures()\n",
-    "print(lgs_performance_train.performance_measures)"
+    "lgs_performance_test = BinaryClassificationPerformance(lgs.predict(X_train), y_train, 'lgs_test')\n",
+    "lgs_performance_test.compute_measures()\n",
+    "print(lgs_performance_.performance_measures)"
    ]
   },
   {
