running project 1 v1 submission code

--- a/jupyter/_firstProject/TC/SM_20200308.ipynb
+++ b/jupyter/_firstProject/TC/SM_20200308.ipynb
@@ -19537,27 +19537,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Pos': 404, 'Neg': 127252, 'TP': 400, 'TN': 127242, 'FP': 10, 'FN': 4, 'Accuracy': 0.9998903302625807, 'Precision': 0.975609756097561, 'Recall': 0.9900990099009901, 'desc': 'lgs_test'}\n"
+      "{'Pos': 74, 'Neg': 31841, 'TP': 19, 'TN': 31654, 'FP': 187, 'FN': 55, 'Accuracy': 0.9924173586088046, 'Precision': 0.09223300970873786, 'Recall': 0.25675675675675674, 'desc': 'lgs_test'}\n"
      ]
     }
    ],
    "source": [
-    "# logistical regression model - most accurate in sample data\n",
+    "# logistical regression model with test\n",
     "\n",
-    "from sklearn import linear_model\n",
-    "lgs = linear_model.SGDClassifier(loss='log')\n",
-    "lgs.fit(X_train, y_train)\n",
-    "\n",
-    "lgs_performance_test = BinaryClassificationPerformance(lgs.predict(X_train), y_train, 'lgs_test')\n",
+    "lgs_performance_test = BinaryClassificationPerformance(lgs.predict(X_test), y_test, 'lgs_test')\n",
     "lgs_performance_test.compute_measures()\n",
-    "print(lgs_performance_.performance_measures)"
+    "print(lgs_performance_test.performance_measures)"
    ]
   },
   {
