adding resubmitted test code - model slightly improved?

--- a/jupyter/_firstProject/TC/SM_20200323_resubmitTest_v1.ipynb
+++ b/jupyter/_firstProject/TC/SM_20200323_resubmitTest_v1.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "\n",
     "\n",
-    "    #COMBINING FEATURES    \n",
+    "    #COMBINING FEATURES    m\n",
     "    # Create `X`, scaled matrix of features\n",
     "    # feature scaling\n",
     "    if (not test):\n",
