--- a/jupyter/_firstProject/TC/SM_20200323_resubmitTest_v1.ipynb
+++ b/jupyter/_firstProject/TC/SM_20200323_resubmitTest_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -251,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Pos': 8363, 'Neg': 119293, 'TP': 8271, 'TN': 119215, 'FP': 78, 'FN': 92, 'Accuracy': 0.9986682960456226, 'Precision': 0.9906575637800934, 'Recall': 0.988999162979792, 'desc': 'lgs_train'}\n"
+      "{'Pos': 8363, 'Neg': 119293, 'TP': 8277, 'TN': 119196, 'FP': 97, 'FN': 86, 'Accuracy': 0.9985664598608761, 'Precision': 0.9884165273465488, 'Recall': 0.9897166088724142, 'desc': 'lgs_train'}\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
      "output_type": "stream",
      "text": [
       "Shape of HashingVectorizer X:\n",
-      "(153164, 131072)\n",
+      "(159571, 131072)\n",
       "Quantitative features include exclamation point count, uppercase usage, and count of disparaging language: \n",
       "   exclamations  allCaps  sjw_count\n",
       "0             0      0.0          0\n",
@@ -302,13 +302,13 @@
       "3             0      0.0          0\n",
       "4             0      0.0          0\n",
       "5             0      0.0          0\n",
-      "6             0      0.0          0\n",
+      "6             0      1.0          0\n",
       "7             0      0.0          0\n",
       "8             0      0.0          0\n",
       "9             0      0.0          0\n",
-      "(153164, 131075)\n",
+      "(159571, 131075)\n",
       "Shape of X_test for submission:\n",
-      "(153164, 131075)\n",
+      "(159571, 131075)\n",
       "SUCCESS!\n",
       "Number of rows in the submission test set (should be 153,164): \n"
      ]
@@ -316,20 +316,20 @@
    ],
    "source": [
     "# SUBMISSION CODE: \n",
-    "raw_data, X_test_submission = process_raw_data(fn='/Users/smolloy/Dev/parsons/ml-2020_data/toxiccomments_test.csv', my_random_seed=42, test=True)\n",
+    "raw_data, X_test_submission = process_raw_data(fn='/Users/smolloy/Dev/parsons/ml-2020_data/toxiccomments_train.csv', my_random_seed=42, test=True)\n",
     "print(\"Number of rows in the submission test set (should be 153,164): \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.134561646339871\n"
+      "0.06820788238464383\n"
      ]
     }
    ],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +372,12 @@
        "      <th></th>\n",
        "      <th>id</th>\n",
        "      <th>comment_text</th>\n",
+       "      <th>toxic</th>\n",
+       "      <th>severe_toxic</th>\n",
+       "      <th>obscene</th>\n",
+       "      <th>threat</th>\n",
+       "      <th>insult</th>\n",
+       "      <th>identity_hate</th>\n",
        "      <th>exclamations</th>\n",
        "      <th>allCaps</th>\n",
        "      <th>sjw_count</th>\n",
@@ -380,40 +386,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>00001cee341fdb12</td>\n",
-       "      <td>Yo bitch Ja Rule is more succesful then you'll...</td>\n",
+       "      <td>0000997932d777bf</td>\n",
+       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0000247867823ef7</td>\n",
-       "      <td>== From RfC == \\n\\n The title is fine as it is...</td>\n",
+       "      <td>000103f0d9cfb60f</td>\n",
+       "      <td>D'aww! He matches this background colour I'm s...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>00013b17ad220c46</td>\n",
-       "      <td>\" \\n\\n == Sources == \\n\\n * Zawe Ashton on Lap...</td>\n",
+       "      <td>000113f07ec002fd</td>\n",
+       "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>00017563c3f7919a</td>\n",
-       "      <td>:If you have a look back at the source, the in...</td>\n",
+       "      <td>0001b41b1c6bb37e</td>\n",
+       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>00017695ad8997eb</td>\n",
-       "      <td>I don't anonymously edit articles at all.</td>\n",
+       "      <td>0001d958c54c6e35</td>\n",
+       "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -423,22 +459,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                 id                                       comment_text  \\\n",
-       "0  00001cee341fdb12  Yo bitch Ja Rule is more succesful then you'll...   \n",
-       "1  0000247867823ef7  == From RfC == \\n\\n The title is fine as it is...   \n",
-       "2  00013b17ad220c46  \" \\n\\n == Sources == \\n\\n * Zawe Ashton on Lap...   \n",
-       "3  00017563c3f7919a  :If you have a look back at the source, the in...   \n",
-       "4  00017695ad8997eb          I don't anonymously edit articles at all.   \n",
+       "                 id                                       comment_text  toxic  \\\n",
+       "0  0000997932d777bf  Explanation\\nWhy the edits made under my usern...      0   \n",
+       "1  000103f0d9cfb60f  D'aww! He matches this background colour I'm s...      0   \n",
+       "2  000113f07ec002fd  Hey man, I'm really not trying to edit war. It...      0   \n",
+       "3  0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...      0   \n",
+       "4  0001d958c54c6e35  You, sir, are my hero. Any chance you remember...      0   \n",
        "\n",
-       "   exclamations  allCaps  sjw_count  \n",
-       "0             0      0.0          0  \n",
-       "1             0      0.0          0  \n",
-       "2             0      0.0          0  \n",
-       "3             0      0.0          0  \n",
-       "4             0      0.0          0  "
+       "   severe_toxic  obscene  threat  insult  identity_hate  exclamations  \\\n",
+       "0             0        0       0       0              0             0   \n",
+       "1             0        0       0       0              0             0   \n",
+       "2             0        0       0       0              0             0   \n",
+       "3             0        0       0       0              0             0   \n",
+       "4             0        0       0       0              0             0   \n",
+       "\n",
+       "   allCaps  sjw_count  \n",
+       "0      0.0          0  \n",
+       "1      0.0          0  \n",
+       "2      0.0          0  \n",
+       "3      0.0          0  \n",
+       "4      0.0          0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -480,27 +523,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>00001cee341fdb12</td>\n",
+       "      <td>0000997932d777bf</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0000247867823ef7</td>\n",
+       "      <td>000103f0d9cfb60f</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>00013b17ad220c46</td>\n",
+       "      <td>000113f07ec002fd</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>00017563c3f7919a</td>\n",
+       "      <td>0001b41b1c6bb37e</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>00017695ad8997eb</td>\n",
+       "      <td>0001d958c54c6e35</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -509,14 +552,14 @@
       ],
       "text/plain": [
        "                 id  prediction\n",
-       "0  00001cee341fdb12       False\n",
-       "1  0000247867823ef7       False\n",
-       "2  00013b17ad220c46       False\n",
-       "3  00017563c3f7919a       False\n",
-       "4  00017695ad8997eb       False"
+       "0  0000997932d777bf       False\n",
+       "1  000103f0d9cfb60f       False\n",
+       "2  000113f07ec002fd       False\n",
+       "3  0001b41b1c6bb37e       False\n",
+       "4  0001d958c54c6e35       False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,16 +570,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(153164, 2)"
+       "(159571, 2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,12 +590,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# EXPORT FINAL SUBMISSION:\n",
-    "my_submission.to_csv('/Users/smolloy/Dev/parsons/ml-2020/jupyter/_firstProject/TC/molloy_toxiccommentsV1_submission.csv', index=False)"
+    "my_submission.to_csv('/Users/smolloy/Dev/parsons/ml-2020/jupyter/_firstProject/TC/molloy_toxiccommentsV1_submission2.csv', index=False)"
    ]
   },
   {
