--- a/jupyter/_firstProject/TC/SM_20200323_resubmitTest_v1.ipynb
+++ b/jupyter/_firstProject/TC/SM_20200323_resubmitTest_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,15 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function that takes raw data and completes all preprocessing required before model fits\n",
     "def process_raw_data(fn, my_random_seed, test=False):\n",
     "    # read and summarize data\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "# QUALITATIVE FEATURES\n",
@@ -162,7 +160,7 @@
     "\n",
     "\n",
     "\n",
-    "    #COMBINING FEATURES    m\n",
+    "    #COMBINING FEATURES    \n",
     "    # Create `X`, scaled matrix of features\n",
     "    # feature scaling\n",
     "    if (not test):\n",
@@ -200,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Pos': 8363, 'Neg': 119293, 'TP': 8277, 'TN': 119196, 'FP': 97, 'FN': 86, 'Accuracy': 0.9985664598608761, 'Precision': 0.9884165273465488, 'Recall': 0.9897166088724142, 'desc': 'lgs_train'}\n"
+      "{'Pos': 8363, 'Neg': 119293, 'TP': 8270, 'TN': 119215, 'FP': 78, 'FN': 93, 'Accuracy': 0.9986604624929498, 'Precision': 0.990656444657403, 'Recall': 0.9888795886643549, 'desc': 'lgs_train'}\n"
      ]
     }
    ],
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +291,7 @@
      "output_type": "stream",
      "text": [
       "Shape of HashingVectorizer X:\n",
-      "(159571, 131072)\n",
+      "(153164, 131072)\n",
       "Quantitative features include exclamation point count, uppercase usage, and count of disparaging language: \n",
       "   exclamations  allCaps  sjw_count\n",
       "0             0      0.0          0\n",
@@ -302,13 +300,13 @@
       "3             0      0.0          0\n",
       "4             0      0.0          0\n",
       "5             0      0.0          0\n",
-      "6             0      1.0          0\n",
+      "6             0      0.0          0\n",
       "7             0      0.0          0\n",
       "8             0      0.0          0\n",
       "9             0      0.0          0\n",
-      "(159571, 131075)\n",
+      "(153164, 131075)\n",
       "Shape of X_test for submission:\n",
-      "(159571, 131075)\n",
+      "(153164, 131075)\n",
       "SUCCESS!\n",
       "Number of rows in the submission test set (should be 153,164): \n"
      ]
@@ -322,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.06820788238464383\n"
+      "0.13786529471677417\n"
      ]
     }
    ],
@@ -346,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -372,12 +370,6 @@
        "      <th></th>\n",
        "      <th>id</th>\n",
        "      <th>comment_text</th>\n",
-       "      <th>toxic</th>\n",
-       "      <th>severe_toxic</th>\n",
-       "      <th>obscene</th>\n",
-       "      <th>threat</th>\n",
-       "      <th>insult</th>\n",
-       "      <th>identity_hate</th>\n",
        "      <th>exclamations</th>\n",
        "      <th>allCaps</th>\n",
        "      <th>sjw_count</th>\n",
@@ -386,70 +378,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0000997932d777bf</td>\n",
-       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>00001cee341fdb12</td>\n",
+       "      <td>Yo bitch Ja Rule is more succesful then you'll...</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>000103f0d9cfb60f</td>\n",
-       "      <td>D'aww! He matches this background colour I'm s...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0000247867823ef7</td>\n",
+       "      <td>== From RfC == \\n\\n The title is fine as it is...</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>000113f07ec002fd</td>\n",
-       "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>00013b17ad220c46</td>\n",
+       "      <td>\" \\n\\n == Sources == \\n\\n * Zawe Ashton on Lap...</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0001b41b1c6bb37e</td>\n",
-       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>00017563c3f7919a</td>\n",
+       "      <td>:If you have a look back at the source, the in...</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0001d958c54c6e35</td>\n",
-       "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>00017695ad8997eb</td>\n",
+       "      <td>I don't anonymously edit articles at all.</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -459,29 +421,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                 id                                       comment_text  toxic  \\\n",
-       "0  0000997932d777bf  Explanation\\nWhy the edits made under my usern...      0   \n",
-       "1  000103f0d9cfb60f  D'aww! He matches this background colour I'm s...      0   \n",
-       "2  000113f07ec002fd  Hey man, I'm really not trying to edit war. It...      0   \n",
-       "3  0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...      0   \n",
-       "4  0001d958c54c6e35  You, sir, are my hero. Any chance you remember...      0   \n",
+       "                 id                                       comment_text  \\\n",
+       "0  00001cee341fdb12  Yo bitch Ja Rule is more succesful then you'll...   \n",
+       "1  0000247867823ef7  == From RfC == \\n\\n The title is fine as it is...   \n",
+       "2  00013b17ad220c46  \" \\n\\n == Sources == \\n\\n * Zawe Ashton on Lap...   \n",
+       "3  00017563c3f7919a  :If you have a look back at the source, the in...   \n",
+       "4  00017695ad8997eb          I don't anonymously edit articles at all.   \n",
        "\n",
-       "   severe_toxic  obscene  threat  insult  identity_hate  exclamations  \\\n",
-       "0             0        0       0       0              0             0   \n",
-       "1             0        0       0       0              0             0   \n",
-       "2             0        0       0       0              0             0   \n",
-       "3             0        0       0       0              0             0   \n",
-       "4             0        0       0       0              0             0   \n",
-       "\n",
-       "   allCaps  sjw_count  \n",
-       "0      0.0          0  \n",
-       "1      0.0          0  \n",
-       "2      0.0          0  \n",
-       "3      0.0          0  \n",
-       "4      0.0          0  "
+       "   exclamations  allCaps  sjw_count  \n",
+       "0             0      0.0          0  \n",
+       "1             0      0.0          0  \n",
+       "2             0      0.0          0  \n",
+       "3             0      0.0          0  \n",
+       "4             0      0.0          0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -523,27 +478,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0000997932d777bf</td>\n",
+       "      <td>00001cee341fdb12</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>000103f0d9cfb60f</td>\n",
+       "      <td>0000247867823ef7</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>000113f07ec002fd</td>\n",
+       "      <td>00013b17ad220c46</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0001b41b1c6bb37e</td>\n",
+       "      <td>00017563c3f7919a</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0001d958c54c6e35</td>\n",
+       "      <td>00017695ad8997eb</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -552,14 +507,14 @@
       ],
       "text/plain": [
        "                 id  prediction\n",
-       "0  0000997932d777bf       False\n",
-       "1  000103f0d9cfb60f       False\n",
-       "2  000113f07ec002fd       False\n",
-       "3  0001b41b1c6bb37e       False\n",
-       "4  0001d958c54c6e35       False"
+       "0  00001cee341fdb12       False\n",
+       "1  0000247867823ef7       False\n",
+       "2  00013b17ad220c46       False\n",
+       "3  00017563c3f7919a       False\n",
+       "4  00017695ad8997eb       False"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,16 +525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(159571, 2)"
+       "(153164, 2)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,12 +545,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# EXPORT FINAL SUBMISSION:\n",
-    "my_submission.to_csv('/Users/smolloy/Dev/parsons/ml-2020/jupyter/_firstProject/TC/molloy_toxiccommentsV1_submission2.csv', index=False)"
+    "my_submission.to_csv('/Users/smolloy/Dev/parsons/ml-2020/jupyter/_firstProject/TC/molloy_toxiccommentsV1_submission4.csv', index=False)"
    ]
   },
   {
