--- a/jupyter/_secondProject/iteration1/SM_20200504_project2_v1.ipynb
+++ b/jupyter/_secondProject/iteration1/SM_20200504_project2_v1.ipynb
@@ -1717,6 +1717,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1523, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test_submission.shape) # should be (1523, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export submission file as pdf\n",
+    "# CHANGE FILE PATH: \n",
+    "X_test_submission.to_csv('airplane_submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
